--- a/.github/workflows/skycast-app.yml
+++ b/.github/workflows/skycast-app.yml
@@ -44,8 +44,8 @@ jobs:
       # 5. Restaurar y publicar Blazor
       - name: Publicar app Blazor WebAssembly
         run: |
-          dotnet restore
-          echo "{\"OpenWeather\":{\"Key\":\"${{ secrets.OPENWEATHER_KEY }}\"}}" > appsettings.Production.json
+          dotnet restore SkyCast/SkyCast.csproj
+          echo "{\"OpenWeather\":{\"Key\":\"${{ secrets.OPENWEATHER_KEY }}\"}}" > SkyCast/appsettings.Production.json
           dotnet publish SkyCast/SkyCast.csproj -c Release -o publish
 
       # 6. Verificar contenido generado
